applications/myip/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myip
  labels:
    app.kubernetes.io/name: myip
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
