applications/myip/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: myip
  namespace: myip
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - "myip.1ms.my"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: myip-frontend
          port: 80
